# vlm_analysis_engine

./: .gitignore  README.md  pyproject.toml
examples/_template/: project.toml  schemas.py
examples/_template/prompts/: first_pass.txt
src/vlm_analysis_engine/: __init__.py  __main__.py  core.py  gemini.py  io.py  media.py  pipeline.py  project.py
src/vlm_engine/: __init__.py  __main__.py  gemini.py  media.py  project.py
