[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-analysis-engine"
version = "0.1.0"
description = "Schema-agnostic VLM analysis pipeline engine powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0",
    "pandas>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "yt-dlp",
    "gallery-dl",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
vlm-run = "vlm_analysis_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
